Fixed button spacing.

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -40,7 +40,7 @@ $navbar-padding-vertical: 0;
 $navbar-margin-bottom: 0;
 $navbar-height: 50px;
 //$navbar-border-radius: 0;
-$nav-link-padding: 2px;
+$nav-link-padding: 2px 5px;
 $navbar-default-toggle-icon-bar-bg: $complement-color;
 $navbar-default-toggle-border-color: transparent;
 $navbar-default-toggle-hover-bg: transparentize($complement-color, 0.5);
